# 100DaysOfCode

./: .gitignore  LICENSE
day_1/python_pandas/: README.md  pyproject.toml
day_10/fast_api/: README.md
day_2/python_rust_ffi/: README.md
day_2/python_rust_ffi/src/: computations.rs
day_3/py_rust_web_pipeline/: Cargo.toml  README.md  justfile  main.py  py_rust_web_pipeline.pyi  pyproject.toml
day_3/py_rust_web_pipeline/src/: collect.rs  lib.rs
day_4/sqlite_visualize/: Cargo.toml  README.md  justfile  main.py  my_database.db  pyproject.toml  sqlite_visualize.pyi
day_4/sqlite_visualize/src/: lib.rs
day_5/python_data/scripts/: 01_compute.ipynb  03_blueprint.ipynb  04_story.ipynb
day_6/notes/: README.md
day_6/notes/android/: .project
day_7/rustlings/exercises/01_variables/: variables2.rs  variables3.rs  variables6.rs
day_7/rustlings/exercises/02_functions/: functions1.rs  functions2.rs
day_7/rustlings/exercises/03_if/: if1.rs  if3.rs
day_7/rustlings/exercises/04_primitive_types/: primitive_types4.rs
day_7/rustlings/exercises/05_vecs/: vecs1.rs  vecs2.rs
day_7/rustlings/exercises/06_move_semantics/: move_semantics3.rs  move_semantics4.rs
day_8/discord_py_bot/: README.md  main.py
day_9/java/00_hello_world/src/: Main.java
day_9/java/01_variables/src/: Main.java
fast_api/: justfile  main.py
week_01/day_001/python_pandas/: main.py  pyproject.toml
week_01/day_002/python_rust_ffi/: Cargo.toml  main.py  pyproject.toml  python_rust_ffi.pyi
week_01/day_003/py_rust_web_pipeline/: justfile
week_01/day_003/py_streamlit/: main.py  pyproject.toml
week_01/day_004/sqlite_visualize/: justfile  main.py  sqlite_visualize.pyi
week_01/day_005/python_data/: README.md  pyproject.toml
week_01/day_006/notes/: pubspec.yaml
week_02/day_008/discord_py_bot/: pyproject.toml
week_02/day_010/fast_api/: pyproject.toml
week_02/day_012/gradle_project/: build.gradle  test.md
(+28 files in other folders)
