[package]
name = "py_rust_web_pipeline"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_rust_web_pipeline"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.53.0", features = ["lazy", "csv"] }
# pyo3 = "0.28.2"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pyo3-polars = "0.26.0"
