[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "py_rust_web_pipeline"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "polars>=1.8.2",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]
