[project]
name = "discord-py-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py[voice]>=2.7.1",
    "logging>=0.4.9.6",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "yt-dlp[default]>=2026.5.5.233942.dev0",
]
